# dhall-python

./: .gitignore  Cargo.toml  Makefile  README.md  default.nix  lint.sh  pyproject.toml  shell.nix
.github/workflows/: builder.dhall  ci.dhall  ci.yml  helpers.dhall  schema.dhall
dhall/: __init__.py  __init__.pyi
tests/: test_hypothesis.py  test_known_bad_behaviour.py  test_relative.py  test_samedir.py
tests/relative_test/: a.dhall  b.dhall
